[SIS-xxx] changing meetup display to use display names instead of mentions fixing not showing organizer if no description was yet